fixed header image legibility

--- a/content/themes/nichole-theme/assets/css/style.css
+++ b/content/themes/nichole-theme/assets/css/style.css
@@ -541,7 +541,8 @@ html {
   display: table; }
 .home-template .vertical-theme-header {
   display: table-cell;
-  vertical-align: middle; }
+  vertical-align: middle;
+  background: rgba(0, 0, 0, 0.2); }
 .home-template .inner-theme-header {
   position: relative;
   width: 80%;
@@ -559,8 +560,7 @@ html {
 .home-template .header-title {
   font-size: 1.5em;
   text-decoration: none;
-  color: #FFF;
-  text-shadow: 0.3px 0.3px 0.5px #000; }
+  color: #FFF; }
 .home-template .header-byline {
   font-size: 1.2em;
   width: 45%;
@@ -569,8 +569,7 @@ html {
   -webkit-hyphens: none;
   -moz-hyphens: none;
   -ms-hyphens: none;
-  hyphens: none;
-  text-shadow: 0.3px 0.3px 0.5px #000; }
+  hyphens: none; }
 
 .theme-button {
   text-decoration: none;
